--- a/packages/toolkit/components/input/_input.scss
+++ b/packages/toolkit/components/input/_input.scss
@@ -14,7 +14,8 @@
   display: flex;
   flex-direction: column;
   gap: $ofh-size-4;
-  margin-bottom: $ofh-size-16;
+
+  @include ofh-responsive-margin(16, 'bottom');
 }
 
 .ofh-input__label,
